# cube-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml  ci.yml  release.yml
dashboard/: biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: main.tsx
dashboard/src/components/: App.tsx  CubeLogo.tsx  DropImport.tsx  Header.tsx  ImportButton.tsx  SessionSelection.tsx  TimerDisplay.tsx  TimesColumn.tsx
dashboard/src/components/modules/: HistoryModule.tsx  RecordsModule.tsx  SessionStatsModule.tsx  TimeTrendModule.tsx
dashboard/src/style/: index.css
dashboard/src/types/: fonts.d.ts  types.ts
dashboard/src/utils/: format.ts  icons.tsx  parse.ts  useContainerHeight.ts  usePersistedSessions.ts
macros/: Cargo.toml
macros/src/: lib.rs
scrambles/: index.ts  package.json  settings.gradle.kts  tsconfig.json
scrambles/gradle/: libs.versions.toml
scrambles/lib/: build.gradle.kts
scrambles/lib/src/main/java/org/example/: Library.java
scrambles/lib/src/test/java/org/example/: LibraryTest.java
src/: main.rs  model.rs  persistence.rs
src/bluetooth/: mod.rs  runtime.rs  timer.rs
src/cli/: mod.rs
src/cstimer/: mod.rs
src/dashboard/: mod.rs
src/handler/: mod.rs
src/model/: bluetooth.rs  confirmation.rs  detailed_stats.rs  details.rs  help.rs  main_focus.rs  mean_details.rs  mod.rs  screen.rs  session.rs  settings.rs
src/msg/: mod.rs
src/persistence/: mod.rs
src/scramble/: mod.rs  wca.rs
src/utils/: mod.rs  runtime.rs
src/view/: mod.rs
src/widgets/: bluetooth.rs  confirmation.rs  detailed_stats.rs  details.rs  help.rs  history.rs  mean_detail.rs  mod.rs  scramble.rs  stats.rs
