[package]
name = "cube-tui"
version = "0.1.0"
edition = "2024"

[features]
dashboard = ["axum", "tokio", "rust-embed", "open", "mime_guess"]
bluetooth = ["uuid", "btleplug", "tokio", "futures-util", "flume"]

[[bin]]
name = "cube"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
ratatui = "0.30.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive", "color"] }
axum = { version = "0.8.8", optional = true }
tokio = { version = "1.50.0", features = ["full"], optional = true }
rust-embed = { version = "8", features = ["mime-guess"], optional = true }
open = { version = "5.3.3", optional = true }
mime_guess = { version = "2.0.5", optional = true }
uuid = { version = "1.21.0", optional = true, features = ["v4"] }
btleplug = { version = "0.11.8", optional = true }
futures-util = { version = "0.3.32", optional = true }
flume = { version = "0.12.0", features = ["async"], optional = true }