[package]
name = "cube-tui"
version = "0.1.6"
edition = "2024"
repository = "https://github.com/enekocm7/cube-tui"
readme = "README.md"
description = "Terminal UI timer and session manager for speedcubing, with optional web dashboard and BLE (GAN) timer support."
license = "MIT"

[features]
dashboard = ["axum", "tokio", "rust-embed", "open", "mime_guess"]
bluetooth = ["uuid", "btleplug", "tokio", "futures-util", "flume"]
wca-scrambles = ["reqwest"]

[[bin]]
name = "cube"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
ratatui = "0.30.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "color"] }
axum = { version = "0.8.9", optional = true }
tokio = { version = "1.52.3", optional = true, features = ["full"] }
rust-embed = { version = "8", features = ["mime-guess"], optional = true }
open = { version = "5.3.5", optional = true }
mime_guess = { version = "2.0.5", optional = true }
uuid = { version = "1.23.1", optional = true, features = ["v4"] }
btleplug = { version = "0.12.0", optional = true }
futures-util = { version = "0.3.32", optional = true }
flume = { version = "0.12.0", features = ["async"], optional = true }
reqwest = { version = "0.13.3", optional = true, default-features = false, features = [
    "blocking",
    "json",
] }
toml = "1.1.2"
