[package]
name = "cube-tui"
version = "0.1.9"
edition = "2024"
repository = "https://github.com/enekocm7/cube-tui"
readme = "README.md"
description = "Terminal UI timer and session manager for speedcubing, with optional web dashboard and BLE (GAN) timer support."
license = "MIT"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

[features]
dashboard = ["axum", "dep:tokio", "rust-embed", "open", "mime_guess"]
bluetooth = ["uuid", "btleplug", "dep:tokio", "futures-util", "flume"]
wca-scrambles = ["jni"]

[[bin]]
name = "cube"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
cube-tui-macros = { path = "macros", version = "0.1.0" }
ratatui = "0.30.2"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
dirs = "6.0.0"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "color"] }
axum = { version = "0.8.9", optional = true }
tokio = { version = "1.52.3", optional = true, features = ["full"] }
rust-embed = { version = "8.11.0", optional = true, features = ["mime-guess"] }
open = { version = "5.3.5", optional = true }
mime_guess = { version = "2.0.5", optional = true }
uuid = { version = "1.23.4", optional = true, features = ["v4"] }
btleplug = { version = "0.12.0", optional = true }
futures-util = { version = "0.3.32", optional = true }
flume = { version = "0.12.0", features = ["async"], optional = true }
jni = { version = "0.22.4", features = ["invocation"], optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
