[package]
name = "cube-tui-macros"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/enekocm7/cube-tui"
license = "MIT"
description = "Procedural macros for cube-tui"

[lints.rust]
unsafe_code = "forbid"

[lib]
proc-macro=true

[dependencies]
syn = { version = "2", features = ["full"]}
quote = "1"
